[package]
name = "pass_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.27", features = ["user"] }
terminal_size = "0.3.0"

[[example]]
name = "debug_action_already_applied"
path = "examples/debug/debug_action_already_applied.rs"

[[example]]
name = "debug_apply_action"
path = "examples/debug/debug_apply_action.rs"

[[example]]
name = "debug_confirm_all_no"
path = "examples/debug/debug_confirm_all_no.rs"

[[example]]
name = "debug_confirm_mixed"
path = "examples/debug/debug_confirm_mixed.rs"

[[example]]
name = "debug_empty"
path = "examples/debug/debug_empty.rs"

[[example]]
name = "debug_env_fail"
path = "examples/debug/debug_env_fail.rs"

[[example]]
name = "debug_env"
path = "examples/debug/debug_env.rs"

[[example]]
name = "debug_long_name"
path = "examples/debug/debug_long_name.rs"

[[example]]
name = "test_user_is_root"
path = "examples/tests/test_user_is_root.rs"

[[example]]
name = "test_is_service_status"
path = "examples/tests/test_is_service_status.rs"

[[example]]
name = "test_is_service_enabled"
path = "examples/tests/test_is_service_enabled.rs"