[package]
name = "pass_tool"
version = "0.3.5"
authors = ["Roman Kudryavtsev <rskbox@gmail.com>"]
license = "MIT"
description = "Tool for system configuration intended for making automation scripts using Rust"
readme = "README.md"
repository = "https://github.com/rsk700/pass_tool"
edition = "2021"

keywords = ["automation", "script"]
categories = ["command-line-utilities", "config", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["user"] }
terminal_size = "0.3.0"

[[example]]
name = "debug_action_already_applied"
path = "examples/debug/debug_action_already_applied.rs"

[[example]]
name = "debug_apply_action"
path = "examples/debug/debug_apply_action.rs"

[[example]]
name = "debug_confirm_all_no"
path = "examples/debug/debug_confirm_all_no.rs"

[[example]]
name = "debug_confirm_mixed"
path = "examples/debug/debug_confirm_mixed.rs"

[[example]]
name = "debug_empty"
path = "examples/debug/debug_empty.rs"

[[example]]
name = "debug_env_fail"
path = "examples/debug/debug_env_fail.rs"

[[example]]
name = "debug_env"
path = "examples/debug/debug_env.rs"

[[example]]
name = "debug_long_name"
path = "examples/debug/debug_long_name.rs"

[[example]]
name = "test_user_is_root"
path = "examples/tests/test_user_is_root.rs"

[[example]]
name = "test_service_in_status"
path = "examples/tests/test_service_in_status.rs"

[[example]]
name = "test_service_is_enabled"
path = "examples/tests/test_service_is_enabled.rs"

[[example]]
name = "test_install_apt_packages"
path = "examples/tests/test_install_apt_packages.rs"

[[example]]
name = "test_write_file"
path = "examples/tests/test_write_file.rs"

[[example]]
name = "test_create_dir"
path = "examples/tests/test_create_dir.rs"

[[example]]
name = "test_set_path_permissions"
path = "examples/tests/test_set_path_permissions.rs"

[[example]]
name = "test_service_command_start"
path = "examples/tests/test_service_command_start.rs"

[[example]]
name = "test_service_command_stop"
path = "examples/tests/test_service_command_stop.rs"

[[example]]
name = "test_service_command_restart"
path = "examples/tests/test_service_command_restart.rs"

[[example]]
name = "test_service_command_reload"
path = "examples/tests/test_service_command_reload.rs"

[[example]]
name = "test_service_command_enable"
path = "examples/tests/test_service_command_enable.rs"

[[example]]
name = "test_service_command_disable"
path = "examples/tests/test_service_command_disable.rs"

[[example]]
name = "test_init_dgraph"
path = "examples/tests/test_init_dgraph.rs"

[[example]]
name = "test_is_applied"
path = "examples/tests/test_is_applied.rs"

[[example]]
name = "test_mark_applied"
path = "examples/tests/test_mark_applied.rs"
